[package]
name = "piccoloctl"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for piccolo. developer only"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rustdds = "0.9.0"