[package]
name = "piccolod"
version = "0.1.0"
edition = "2021"
description = "A piccolo daemon that operates like API-server of k8s"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.7"
serde = { version = "1.0", features = ["derive"] }
rustdds = "0.9.0"