[package]
name = "piccoloyaml"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for piccolo. developer only"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
clap = { version = "4.5.4", features = ["derive"] }
tonic = "0.11.0"
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.11.0"