# SPDX-FileCopyrightText: Copyright 2024 LG Electronics Inc.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "api-server"
version = "0.1.0"
edition = "2021"
description = "A piccolo daemon that operates like API-server of k8s"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
importer = { path = "../importer"}
axum = "0.7.5"
#futures = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.12.1"
prost = "0.13.1"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.12.1"
