# SPDX-FileCopyrightText: Copyright 2024 LG Electronics Inc.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = "0.2.33"
config = "0.14.1" # Pulls in `json5`, which uses the ISC license.
etcd-client = "0.14.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9"
prost = "0.13.3"
tonic = "0.12.3"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.12.3"