# SPDX-FileCopyrightText: Copyright 2024 LG Electronics Inc.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
const_format = "0.2.33"
config = "0.14.1"
etcd-client = "0.14.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9"
prost = "0.13.3"
tonic = "0.12.3"
tokio = { version = "1.43.1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.143"
lazy_static = "1.4.0"
rocksdb = "0.24.0"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1.3"

[build-dependencies]
tonic-build = "0.12.3"

