# SPDX-FileCopyrightText: Copyright 2024 LG Electronics Inc.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = "0.2.33"
config = { version = "0.15.19", default-features = false, features = ["json", "yaml", "toml"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9"
prost = "0.13.3"
tonic = "0.12.3"
tokio = { version = "1.43.1", features = ["full"] }
serde_json = "1.0.143"
lazy_static = "1.4.0"
anyhow = "1.0.101"
libc = "0.2.182"
bytes = "1.11.1"

[build-dependencies]
tonic-build = "0.12.3"

