[package]
name = "dummy-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
#common = { path = "../common" }
axum = "0.7.5"
dust_dds = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
tonic = "0.11.0"
prost = "0.12.6"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.11.0"
