[package]
name = "dummy-light-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
dust_dds = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tonic = "0.11.0"
prost = "0.12.6"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.11.0"