# SPDX-FileCopyrightText: Copyright 2024 LG Electronics Inc.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "importer"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for piccolo. developer only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
prost = "0.12.6"
reqwest = "0.12.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tar = "0.4"
zip = "2.1.2"

[build-dependencies]
tonic-build = "0.11.0"
