# SPDX-FileCopyrightText: Copyright 2024 LG Electronics Inc.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "importer"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for piccolo. developer only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
reqwest = "0.12.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tar = "0.4"

[build-dependencies]
tonic-build = "0.11.0"
