[package]
name = "metric-notifier"
version = "0.1.0"
edition = "2018"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.11.0"
prost = "0.12.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }
hyperlocal = { version = "0.8", features = ["client"] }
tokio-util = "0.7.11"
futures = "0.3.30"

[build-dependencies]
tonic-build = "0.11.0"
