# SPDX-FileCopyrightText: Copyright 2024 LG Electronics Inc.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "statemanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9"
dbus = "0.9.7"
tonic = "0.12.3"
prost = "0.13.3"
ssh2 = "0.9.4"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.12.3"
