[package]
name = "workloadconverter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.9.5"
serde = { version = "1.0", features = ["derive"]}
clap = { version = "4.5.4", features = ["derive"] }