[package]
name = "filtergateway"
version = "0.1.0"
edition = "2021"
authors = ["LG Electronics"]
license = "Apache-2.0"
description = "Filter Gateway component for Pullpiri"
build = "build.rs"

[dependencies]
dust_dds = "0.12.0"
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.12.3"
prost = "0.13.3"
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9"
common = { workspace = true }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
idl-parser = "0.1.0"    
anyhow = "1"
serde_json = "1"
once_cell = "1.19.0"
async-trait = "0.1.88"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"



[build-dependencies]
dust_dds = "0.12.0"
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.12.3"
prost = "0.13.3"
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
idl-parser = "0.1.0"    
serde_json = "1"
once_cell = "1.19.0"
async-trait = "0.1.88"
chrono = "0.4"
