# SPDX-FileCopyrightText: Copyright 2024 LG Electronics Inc.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "logservice"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
prost = "0.13.3"
chrono = { version = "0.4.43", features = ["std"] }
tokio = { version = "1.43.1", features = ["full"] }
common = { workspace = true }
axum = "0.7.7"
tokio-stream = { version = "0.1.18", features = ["sync"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.143"

