# SPDX-FileCopyrightText: Copyright 2024 LG Electronics Inc.
#
# SPDX-License-Identifier: Apache-2.0
[package]
name = "monitoringserver"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
common.workspace = true
prost = "0.14.1"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = "1.43.1"
tonic = "0.12.3"
