# SPDX-FileCopyrightText: Copyright 2024 LG Electronics Inc.
#
# SPDX-License-Identifier: Apache-2.0
[package]
name = "policymanager"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
common = { workspace = true }
tonic = "0.12.3"
tokio = { version = "1.43.1", features = ["macros", "rt-multi-thread"] }
serde_yaml = "0.9"
lazy_static = "1.4"
