[package]
name = "settingsservice"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "PICCOLO Settings Service - Central configuration and metrics management service"

[[bin]]
name = "settingsservice"
path = "src/main.rs"

[[bin]]
name = "settings-cli"
path = "src/bin/settings-cli.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.43.1", features = ["full"] }
futures = "0.3"

# Web framework
axum = "0.7.7"
tower = "0.4"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Validation
jsonschema = "0.18"

# Data storage
etcd-client = "0.14"

# CLI
clap = { version = "4.0", features = ["derive", "env"] }
rustyline = "14.0"

# Logging and errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "2.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
url = "2.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async utilities
async-trait = "0.1"

# Configuration
config = "0.14"

# Common shared library
common = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
wiremock = "0.6"