[package]
name = "settingscli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.43.1", features = ["full"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0"
colored = "2.0"

[dev-dependencies]
tokio-test = "0.4"
