# SPDX-FileCopyrightText: Copyright 2024 LG Electronics Inc.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "workloadconverter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"]}
clap = { version = "4.5.6", features = ["derive"] }